# SmartCycle

./: .dockerignore  .gitignore  .mise.toml  README.md  backend_logs.txt  docker-compose.yml  lefthook.yml  start_dev.ps1
client/: .gitignore  Dockerfile  README.md  biome.json  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.app.json  vite.config.ts
client/envs/: .env.example
client/src/: index.css  main.tsx  routeTree.gen.ts  theme.ts  vite-env.d.ts
client/src/api/: auth.ts  camera.ts  gateCamera.ts  overheadCamera.ts  parking-lots.ts  parking-status.ts  reservations.ts
client/src/components/app-layout/: app-footer-nav.tsx  app-header.tsx  app-layout.css  app-layout.tsx  app-sidebar.tsx
client/src/components/camera/: camera.tsx
client/src/components/dashboard/: dashboard.tsx
client/src/components/floorPlan/: FloorPlanModal.css  FloorPlanModal.tsx
client/src/components/gate-camera/: GateCamera.tsx
client/src/components/login/: login.auth.ts  login.css  login.tsx
client/src/components/lots/: lots.tsx  register.tsx
client/src/components/map/: CurrentLocationMarker.tsx  MapSideDrawer.tsx  NavRecenterButton.tsx  NavigationPanel.tsx  RouteMapLayer.tsx  RouteOriginDestinationBar.tsx  RoutePreviewPanel.tsx  map.tsx
client/src/config/: env.ts
client/src/layouts/: SidebarMenuContent.tsx  footer-nav.tsx  header.tsx  layout.tsx  sidebar.tsx
client/src/lib/: adminRole.ts  apiClient.ts  ev3Parking.ts
client/src/queries/: queryClient.ts
client/src/routes/: index.tsx
docs/: ACCOUNTS.md  API_DESIGN.md  BRANCH_RULE.md  database-design.md
sample/: schema.sql  seed.js  server.js  smartcycle.db
sample/public/: admin.css  admin.html  admin.js  app.js  index.html  style.css
server/: .gitignore  Dockerfile  README.md  alembic.ini  pyproject.toml
server/alembic/: env.py  script.py.mako
server/alembic/versions/: 20260422_0001_create_users_table.py  20260511_0002_add_parking_domain_tables.py  4d7b0cafa648_add_created_at_to_user.py  6fcc1ee90248_add_role_to_user.py  7fcc1ee90249_add_availability_source_type_to_parking_lots.py  8fcc1ee90250_add_owner_id_to_parking_lots.py
server/envs/: .env.example
server/scripts/: README.md  ev3_touch_monitor.py
server/src/: __init__.py  main.py
server/src/bootstrap/: app_builder.py  router_registry.py
server/src/infrastructure/: __init__.py
server/src/infrastructure/config/: __init__.py  deps.py  settings.py
server/src/infrastructure/db/: __init__.py  base.py  seed.py  session.py
server/src/infrastructure/db/models/: __init__.py  camera_detection.py  device.py  parking_lot.py  parking_status.py  parking_status_history.py  reservation.py  user.py
server/src/infrastructure/db/seed/: __init__.py  camera.py  parking_domain.py  reservations.py  user.py  users.py
server/src/infrastructure/http/: __init__.py  exception_handlers.py
server/src/infrastructure/logger/: __init__.py  logger.py
server/src/infrastructure/middleware/: __init__.py  cors.py  gzip.py  logging.py  setup.py
server/src/modules/: __init__.py
server/src/modules/auth/: __init__.py  api.py  dependencies.py  service.py
server/src/modules/camera/: __init__.py  api.py  service.py
server/src/modules/example/: __init__.py  api.py  service.py
server/src/modules/gate_camera/: __init__.py  api.py
server/src/modules/health/: __init__.py  api.py  service.py
server/src/modules/iot/: __init__.py  api.py
server/src/modules/line/: __init__.py  catalog.py  messages.py  service.py  validation.py
server/src/modules/overhead_camera/: __init__.py  api.py
server/src/modules/parking_lots/: api.py
server/src/modules/reservations/: __init__.py  api.py
server/src/shared/: __init__.py  errors.py
(+22 files in other folders)
